Job title and Descriptions changed

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">Dubai, UAE· +97150 1626838 ·
           <a href="mailto:name@email.com">ahmed.almoussa@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I'm a business growth specialist, growing a businesses at 10 folds. Currently my interests are increasing efficiency with technology, growth hacking, and building products that people want </p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
@@ -95,12 +95,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Operations Manager</h3>
+            <div class="subheading mb-3">Specialized & Interactive Systems</div>
+            <p>Optimizing overhead costs, expanding market share in hospitality, expanding into other market verticals, and adding new tech solutions into our portfolio </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">2017 - Present</span>
           </div>
         </div>
 
